--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,18 @@
     margin: 0;
     box-sizing: border-box;
 }
+
+/* General styles */
+body {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    /* Generic project styles */
+    color: #000000;
+}
+
+
+
 /* Header */
 header{
     background-color: #e8e8e8;
@@ -11,6 +23,8 @@ header{
 /* Main content */
 main {
     background-color: #e8e8e8;
+    /* Make main element take up any surplus space to pusj footer down */
+    flex: 1 0 auto;
 }
 /* Footer */
 footer {
