--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,3 +86,15 @@ main {
 footer {
     background-color: #e8e8e8;
 }
+/* Social media icons alignment */
+#social {
+    margin-bottom: 70px;
+    text-align: center;
+}
+
+#social li {
+    list-style-type: none;
+    display: inline;
+    margin-left: 50px;
+    margin-right: 50px;
+}
