--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -83,7 +83,76 @@ main {
 }
 
 /* Inquiry Form */
+.contact {
+    clear: left;
+    background-color: #e8e8e8;
+    background-blend-mode: multiply;
+    background-size: cover;
+    background-position: center;
+    height: 800px;
+    margin-bottom: 1px;
+}
 
+.inquiry-form {
+    margin: 150px 10% 0 0;
+    color: #000000;
+    background-color: #FFFFFF;
+    max-width: 500px;
+    position: absolute;
+    padding: 30px;
+    left: 10%;
+}
+
+.inquiry-form h2 {
+    color: #000000;
+    margin-bottom: 20px;
+    letter-spacing: 4px;
+    text-transform: uppercase;
+}
+
+.text-input {
+    background: transparent;
+    color: #000000;
+    width: 100%;
+    height: 25px;
+    margin: 5px 0 20px 0;
+    border: 1px solid #000000;
+    border-radius: 2px;
+}
+
+.text-input:hover {
+    border-color: #8f8e8e8c;
+}
+
+#message {
+    height: 75px;
+}
+
+.submit-enquiry-button {
+    margin-top: 5px;
+    border-radius: 6px;
+    padding: 25px 42px 25px 42px;
+    text-align: center;
+    font-size: 100%;
+    background-color: #000000;
+    color: #000000;
+    display: block;
+    cursor: pointer;
+}
+
+.submit-enquiry-button:hover {
+    background-color: #8f8e8e8c;
+    color: #000000;
+    cursor: pointer;
+}
+
+.form-section input[type="submit"] {
+    cursor: pointer;
+}
+
+#thank-you {
+    max-width: 800px;
+}
 
 /* Footer */
 footer {
