--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,7 +31,7 @@ header{
 
 /* Logo and navigation Menu */
 
-#logi, #menu {
+#logo, #menu {
     line-height: 100px;
 }
 
@@ -82,6 +82,21 @@ main {
     flex: 1 0 auto;
 }
 
+.about-text {
+    background-color: #FFFFFF;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 100%;
+    margin-left: 30px;
+    float: left
+}
+
+.right-image {
+    float: right
+}
+
+h2 {
+    margin-left: 30px;
+}
 /* Inquiry Form */
 .contact {
     clear: left;
