--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,49 +9,42 @@
 }
 
 /* General styles */
-body { 
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
+body {
     /* Generic project styles */
     color: #000000;
     font-family: 'Montserrat', sans-serif;
-}
-
-#navigation {
-    position: fixed;
-    width: 100%;
-    z-index: 3;
-}
-
+} 
 /* Header */
-header{
+
+header {
     background-color: #e8e8e8;
     padding: 0 1rem;
-    position:fixed;
+    position: fixed;
     z-index: 99;
     width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+}
 
+header a {
+    text-decoration: none;
+    color: inherit;
 }
 
 /* Logo and navigation Menu */
 
-#logo, #menu {
-    line-height: 100px;
-}
 
 #logo {
-    float: left;
     margin-left: 50px;
     margin-top: 0;
-    width: 20%;
-    height: 20%;
+    width: 40%;
+    height: 40%;
 }
 
 #menu {
-    float: right;
     margin-right: 100px;
-    margin-top: 170px;
+    margin-top: 120px;
     font-size: 180%;
     letter-spacing: 12px;
     text-transform: uppercase;
@@ -76,6 +69,8 @@ header{
     display: inline;
     margin-left: 30px;
 }
+
+/* Main content */
 
 /* About section */
 
