--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -98,6 +98,15 @@ nav {
     font-size: 4rem;
 }
 
+/* Main content */
+main {
+    background-color: #e8e8e8;
+    flex: 1 0 auto;
+    margin-top: 47px;
+    width: 100%;
+    
+}
+
 /* About section */
 
 #about {
@@ -133,6 +142,7 @@ nav {
     display: flex;
     justify-content: center;
     margin-right: 80px;
+    margin-left: 80px;
 }
 
 /* Portfolio section */
@@ -148,9 +158,15 @@ nav {
 }
 
 /* Inquiry Form */
+
+#form-bg {
+    height: 100%;
+    width: 100%;
+    background: url("assets/pictures/form-bg.jpg") no-repeat center center/cover;
+}
+
 .contact {
     clear: left;
-    background-color: #e8e8e8;
     background-blend-mode: multiply;
     background-size: cover;
     background-position: center;
