--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -104,7 +104,6 @@ main {
     flex: 1 0 auto;
     margin-top: 47px;
     width: 100%;
-    
 }
 
 /* About section */
@@ -251,8 +250,23 @@ footer {
     padding: 25px 0;
 }
 
+
+
+
 /* Media query: large or landscape phones (576px and up) */
 @media screen and (min-width: 576px) {
+
+    /* Portfolio */
+    #photos {
+        column-count: 2;
+        column-gap: 1rem;
+    }
+}
+
+/* Media query: for large devices (992px and up) */
+@media screen and (min-width: 992px) {
+
+    /* Portfolio */
     #photos {
         column-count: 4;
         column-gap: 1rem;
@@ -284,7 +298,6 @@ footer {
     }
 
     #logo {
-        font-size: 280%;
         line-height: 75px;
         margin: 0 0.5rem;
     }
