--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,47 +102,15 @@ nav {
 main {
     background-color: #e8e8e8;
     flex: 1 0 auto;
-    margin-top: 47px;
-    width: 100%;
+    margin-top: 120px;
+    display: flex;
+    flex-direction: column;
+    
 }
 
 /* About section */
 
-#about {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    background-color: #e8e8e8;
-    flex: 1 0 auto;
-    margin-top: 50px;
-}
 
-#about-text {
-    margin-top: 150px
-}
-
-#about-text h2 {
-    background-color: #e8e8e8;
-    margin-left: 90px;
-}
-
-#about-text p {
-    background-color: #FFFFFF;
-    padding: 20px;
-    margin-left: 80px;
-    justify-content: center;
-    margin-bottom: 20px;
-    margin-right: 80px;
-}
-
-#about-image {
-    margin-bottom: 20px;
-    display: flex;
-    justify-content: center;
-    margin-right: 80px;
-    margin-left: 80px;
-}
 
 /* Portfolio section */
 
@@ -158,25 +126,21 @@ main {
 
 /* Inquiry Form */
 
-#form-bg {
-    height: 100%;
-    width: 100%;
-    background: url("assets/pictures/form-bg.jpg") no-repeat center center/cover;
-}
-
 .contact {
     clear: left;
+    background-image: url(/assets/pictures/bg5.jpg);
     background-blend-mode: multiply;
     background-size: cover;
     background-position: center;
-    height: 800px;
-    margin-top: 100px;
+    height: 900px;
+    margin-top: 50px;
+    margin-bottom: 1px;
 }
 
 .inquiry-form {
     margin: 150px 10% 0 0;
     color: #000000;
-    background-color: #FFFFFF;
+    background-color: rgba(255, 255, 255, 0.6);
     max-width: 500px;
     position: absolute;
     padding: 30px;
