--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -110,7 +110,95 @@ main {
 
 /* About section */
 
+.pic-ctn {
+    width: 100%;
+}
 
+@keyframes display {
+    0% {
+        transform: translateX(500px);
+        opacity: 0;
+    }
+
+    10% {
+        transform: translateX(0);
+        opacity: 1;
+    }
+
+    20% {
+        transform: translateX(0);
+        opacity: 1;
+    }
+
+    30% {
+        transform: translateX(-500px);
+        opacity: 0;
+    }
+
+    100% {
+        transform: translateX(-500px);
+        opacity: 0;
+    }
+}
+
+.pic-ctn {
+    position: relative;
+    width: 100%;
+    height: 300px;
+    margin-top: 50px;
+}
+
+.pic-ctn>img {
+    position: absolute;
+    top: 0;
+    left: calc(50% - 100px);
+    opacity: 0;
+    animation: display 36s infinite;
+}
+
+img:nth-child(2) {
+    animation-delay: 6s;
+}
+
+img:nth-child(3) {
+    animation-delay: 10s;
+}
+
+img:nth-child(4) {
+    animation-delay: 14s;
+}
+
+img:nth-child(5) {
+    animation-delay: 18s;
+}
+
+img:nth-child(6) {
+    animation-delay: 22s;
+}
+
+img:nth-child(7) {
+    animation-delay: 26s;
+}
+
+img:nth-child(8) {
+    animation-delay: 30s;
+}
+
+.about-text {
+    margin-top: 50px;
+}
+
+.about-text h1 {
+    margin-left: 90px;
+}
+
+.about-text p {
+    background-color: #FFFFFF;
+    padding: 20px;
+    margin-left: 80px;
+    justify-content: center;
+    margin-right: 80px;
+}
 
 /* Portfolio section */
 
