--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -155,7 +155,7 @@ main {
     background-blend-mode: multiply;
     background-size: cover;
     background-position: center;
-    height: 100%;
+    height: 80vh;
     margin-top: 50px;
     margin-bottom: 1px;
 }
