--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,11 +107,70 @@ nav {
 main {
     background-color: #e8e8e8;
     flex: 1 0 auto;
-    margin-top: 120px;
+    margin-top: 100px;
     display: flex;
     flex-direction: column;
     
 }
+
+/* Home section */
+
+.home {
+    background-image: url(../pictures/bg3.jpg);
+    background-blend-mode: multiply;
+    background-size: cover;
+    background-position: center;
+    height: 80vh;
+    margin-top: 50px;
+    margin-bottom: 1px;
+}
+
+.home-text {
+    width: 400px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: auto;
+}
+    
+h1 {
+    text-transform: uppercase;
+    font-size: 140%;
+    margin-bottom: 0;
+    text-align: center;
+}
+    
+h2 {
+    margin-bottom: 40px;
+    font-size: 140%;
+    padding: 10px;
+    color: rgba(0, 0, 0, 0.4);
+    
+}
+
+.button-home {
+    margin-top: 20px;
+    border-radius: 6px;
+    padding: 10px 20px 10px 20px;
+    text-align: center;
+    font-size: 100%;
+    background-color: #e8e8e8;
+    color: #000000;
+    display: block;
+    cursor: pointer;
+    letter-spacing: 5px;
+    text-transform: uppercase;
+}
+    
+.home-text {
+    margin-top: 250px;
+    background-color:rgba(255, 255, 255, 0.6);
+    padding: 10px;
+    color: #000000;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+ }
 
 /* About section */
 
@@ -261,7 +320,7 @@ footer {
 }
 
 /* Media query: for large devices (992px and up) */
-@media screen and (min-width: 992px) {
+@media screen and (min-width: 1147px) {
 
     /* Header */
     nav {
