--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -116,7 +116,7 @@ main {
 /* Home section */
 
 .home {
-    background-image: url(../pictures/bg3.jpg);
+    background-image: url(../pictures/1.jpg);
     background-blend-mode: multiply;
     background-size: cover;
     background-position: center;
@@ -126,7 +126,7 @@ main {
 }
 
 .home-text {
-    width: 400px;
+    width: 300px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -185,7 +185,7 @@ h2 {
 }
 
 .about-text h1 {
-    margin-left: 90px;
+    margin-left: 30px;
 }
 
 .about-text p {
@@ -285,6 +285,15 @@ h2 {
 /* Footer */
 footer {
     background-color: #e8e8e8;
+}
+
+/* Google Maps */
+
+iframe {
+    width: 100vh;
+    height: 300px;
+    border: none;
+    filter: grayscale(100%);
 }
 
 /* Social media icons alignment */
