--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -116,7 +116,7 @@ main {
 /* Home section */
 
 .home {
-    background-image: url(../pictures/1.jpg);
+    background-image: url(../pictures/home2.jpg);
     background-blend-mode: multiply;
     background-size: cover;
     background-position: center;
@@ -131,46 +131,34 @@ main {
     flex-direction: column;
     align-items: center;
     margin: auto;
-}
-    
-h1 {
     text-transform: uppercase;
-    font-size: 140%;
-    margin-bottom: 0;
     text-align: center;
-}
-    
-h2 {
-    margin-bottom: 40px;
-    font-size: 140%;
+    font-size: 90%;
+    letter-spacing: 10px;
+    margin-top: 250px;
     padding: 10px;
-    color: rgba(0, 0, 0, 0.4);
-    
+    color: #000000;
 }
 
 .button-home {
     margin-top: 20px;
-    border-radius: 6px;
-    padding: 10px 20px 10px 20px;
+    border-radius: 10px;
+    padding: 15px 25px 15px 25px;
     text-align: center;
     font-size: 100%;
-    background-color: #e8e8e8;
+    background-color: rgba(255, 255, 255, 0.3);;
     color: #000000;
     display: block;
     cursor: pointer;
-    letter-spacing: 5px;
+    letter-spacing: 10px;
     text-transform: uppercase;
 }
-    
-.home-text {
-    margin-top: 250px;
-    background-color:rgba(255, 255, 255, 0.6);
-    padding: 10px;
+
+.button-home:hover {
+    background-color: #8f8e8e8c;
     color: #000000;
-    display: flex;
-    align-items: center;
-    justify-content: center;
- }
+    cursor: pointer;
+}
 
 /* About section */
 
@@ -305,7 +293,7 @@ iframe {
 /* Contacts */
 
 #contacts {
-    margin-bottom: 50px;
+    margin-bottom: 70px;
     letter-spacing: 4px;
     text-transform: uppercase;
     line-height: 2rem;
